--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: build
         env:
-          BASE_PATH: '/fladan'
+          BASE_PATH: '/'
         run: |
           pnpm run build
           touch build/.nojekyll
