--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,32 @@
-.DS_Store
-resources/
-.zig-cache/
-zig-out/
+# The directory Mix will write compiled artifacts to.
+/_build/
+
+# If you run "mix test --cover", coverage assets end up here.
+/cover/
+
+# The directory Mix downloads your dependencies sources to.
+/deps/
+
+# Where third-party dependencies like ExDoc output generated docs.
+/doc/
+
+# Ignore .fetch files in case you like to edit your project deps locally.
+/.fetch
+
+# If the VM crashes, it generates a dump, let's ignore it too.
+erl_crash.dump
+
+# Also ignore archive artifacts (built via "mix archive.build").
+*.ez
+
+# Ignore package tarball (built via "mix hex.build").
+personal_website-*.tar
+
+# Temporary files, for example, from tests.
+/tmp/
+
+# Render output
+/output/
+
+/.elixir_ls/
+/node_modules/
