--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,8 +10,8 @@ jobs:
     name: OTP ${{matrix.otp}} / Elixir ${{matrix.elixir}}
     strategy:
       matrix:
-        otp: ['27.0']
-        elixir: ['1.18']
+        otp: ["28.0"]
+        elixir: ["1.19"]
     steps:
       - uses: actions/checkout@v4
       - uses: erlef/setup-beam@v1
@@ -22,4 +22,3 @@ jobs:
 
       - name: Build
         run: MIX_ENV=prod mix compile
-
