--- a/mise.toml
+++ b/mise.toml
@@ -1,15 +1,29 @@
 [env]
 MIX_ENV = "prod"
+HEX_HOME = "~/.hex"
+MIX_HOME = "~/.mix"
+MIX_XDG = "1"
 
 [tasks]
 fetch = "git pull origin release"
+clean = "rm -rf _build deps"
+deps = [
+    "mix local.hex --force",
+    "mix local.rebar --force",
+    "mix deps.get --only prod"
+]
+build = "mix release ackurat --overwrite"
 release = [
-    "mix release ackurat --overwrite",
-    "sudo mv _build /opt/ackurat/app"
-    ]
-replace = "sudo systemctl restart ackurat"
+    "sudo systemctl stop ackurat",
+    "sudo rm -rf /opt/ackurat/app/release",
+    "sudo cp -r _build/prod/rel/ackurat /opt/ackurat/app/release",
+    "sudo chown -R ackurat:ackurat /opt/ackurat/app/release",
+    "sudo systemctl start ackurat"
+]
+deploy = ["fetch", "deps", "build", "release"]
 
 [tools]
 elixir = "1.19.5-otp-28"
 erlang = "28.3.1"
 nodejs = "24.7.0"
+rust = "latest"
